--- a/brexitVisualization.html
+++ b/brexitVisualization.html
@@ -113,7 +113,7 @@
 			</button> 
 		</div>
 		<div align="right" id="details" class="detailsDiv">
-			<h1>Details about selected region</h1>
+			<h1>Details about selected region/s</h1>
 		</div>
 		<div align="center" id="analytics" class="analyticsDiv">
 			<h1>Analytics</h1>
@@ -125,6 +125,7 @@
 		</div>
 	<script src="lib/d3.min.js" charset="utf-8"></script>
 	<script src='simplified-gb2.js'></script>
+	<script src='classes.js'></script>
 	<script src='charts.js'></script>
 	</body>
 </html>
