Started implementing select/deselect all.

--- a/brexitVisualization.html
+++ b/brexitVisualization.html
@@ -111,6 +111,12 @@
 			<button type="button" id="bothButton" class="button">
 				Show both
 			</button> 
+			<button type="button" id="selectAllButton" class="button">
+				Select all
+			</button>
+			<button type="button" id="deselectAllButton" class="button">
+				Deselect all
+			</button>
 		</div>
 		<div align="right" id="details" class="detailsDiv">
 			<h1>Details about selected region/s</h1>
