--- a/brexitVisualization.html
+++ b/brexitVisualization.html
@@ -50,7 +50,6 @@
 				opacity: 1;
 				border: 1px solid #000;
 			}
-			
 			#resultsButton{
 				border: 2px solid #000;
 				top: 30px;
@@ -63,6 +62,14 @@
 			#bothButton{
 				top: 30px;
 				left: 20px;
+			}
+			#selectAllButton{
+				top: 60px;
+				left: -248px;
+			}
+			#deselectAllButton{
+				top: 60px;
+				left: -243px;
 			}
 			.startInput{
 				position: relative;
